--- a/index.html
+++ b/index.html
@@ -5,17 +5,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Advinhe o destino!</title>
+  <title>Advinhe!</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&family=Poppins:wght@200;400;600&display=swap"
+    rel="stylesheet">
+
 </head>
 
 <body>
-  <img
-    src="https://gist.githubusercontent.com/maykbrito/0acdf4ce919838ffed50915a31fc5b23/raw/6f4dd01ec3116428ec4c99255944cb9ac7927590/cristal-ball.svg"
-    alt="Imagem de uma bola de cristal" />
-  <h1>Vou revelar seu destino!</h1>
-  <p>Clique em fazer pergunta para que seu destino seja revelado!</p>
-  <input type="text" placeholder="Digite sua pergunta" />
-  <button>Fazer pergunta</button>
+  <main>
+    <img
+      src="https://gist.githubusercontent.com/maykbrito/0acdf4ce919838ffed50915a31fc5b23/raw/6f4dd01ec3116428ec4c99255944cb9ac7927590/cristal-ball.svg"
+      alt="Imagem de uma bola de cristal" />
+    <h1>Vou revelar seu destino!</h1>
+    <p>Clique em fazer pergunta para que seu destino seja revelado.</p>
+    <input type="text" placeholder="Digite sua pergunta" />
+    <button type="submit">Fazer pergunta</button>
+  </main>
 </body>
 
 </html>
