--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
 
 <body>
   <main>
-    <img
-      src="https://gist.githubusercontent.com/maykbrito/0acdf4ce919838ffed50915a31fc5b23/raw/6f4dd01ec3116428ec4c99255944cb9ac7927590/cristal-ball.svg"
-      alt="Imagem de uma bola de cristal" />
-    <h1>Vou revelar seu destino!</h1>
-    <p>Clique em fazer pergunta para que seu destino seja revelado.</p>
+    <img src="images/ball.jpg" alt="Imagem de uma bola de cristal" class="ball" />
+    <h1>Sacar o destino!</h1>
+    <p>Clique em fazer pergunta para revelar.</p>
     <input type="text" placeholder="Digite sua pergunta" />
     <button type="submit">Fazer pergunta</button>
+    <img src="images/hinata.png" alt="" class="bg">
   </main>
 </body>
 
