:art: atualizar estrutura html e adicionar novos identificadores

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <img src="images/icone-explorer.png" alt="Icone do evento Maratona Explorer" class="icone-explorer" />
     <h1>Sacar o destino!</h1>
     <p>Clique em fazer pergunta para revelar.</p>
-    <input type="text" placeholder="Digite sua pergunta" id="pergunta" />
-    <button onclick="fazerPergunta()">Fazer pergunta</button>
+    <input type="text" placeholder="Digite sua pergunta" id="input-pergunta" />
+    <button onclick="fazerPergunta()" id="btn-perguntar">Fazer pergunta</button>
     <img src="images/hinata.png" alt="Imagem de um personagem de animação japonesa" class="hinata">
-    <h3 id="resposta"></h3>
+    <div id="root"></div>
   </main>
   <script src="script.js"></script>
 </body>
