:art: alterar imagem do rodapé

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>Clique em fazer pergunta para revelar.</p>
     <input type="text" placeholder="Digite sua pergunta" id="input-pergunta" />
     <button onclick="fazerPergunta()" id="btn-perguntar">Fazer pergunta</button>
-    <img src="images/hinata.png" alt="Imagem de um personagem de animação japonesa" class="hinata">
+    <img src="images/astronauta.png" alt="Imagem de um personagem de animação japonesa" class="astronauta">
     <div id="root"></div>
   </main>
   <script src="script.js"></script>
