--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1>Sacar o destino!</h1>
     <p>Clique em fazer pergunta para revelar.</p>
     <input type="text" placeholder="Digite sua pergunta" id="input-pergunta" />
-    <button onclick="fazerPergunta()" id="btn-perguntar">Fazer pergunta</button>
+    <button id="btn-perguntar">Fazer pergunta</button>
     <img src="images/astronauta.png" alt="Imagem de um personagem de animação japonesa" class="astronauta">
     <div id="root"></div>
   </main>
